examples/negative/silent_contract/handle_residual_effect.kai
# Silent contract (#511 audit): `handle { ... } with Io { ... }`
# body calls `Net.fetch` — an op of a totally different effect.
# The expected behavior is that `Net` surfaces in the enclosing
# row (since `handle ... with Io` only strips `Io`). Today stage 2
# compiles the program without diagnostic; the resulting binary
# segfaults at runtime (no handler installed for `Net`). See
# examples/negative/silent_contract/README.md for follow-up issue.

effect Io { print_io(s: String) : Unit }
effect Net { fetch(s: String) : String }

fn main() : Int {
  let r = handle {
    Net.fetch("http://x")
    0
  } with Io {
    print_io(s, resume) -> resume(())
    return(x)           -> x
  }
  r
}
